terraform/eks-inclb/1-vpc.tf
# Create a VPC
resource "aws_vpc" "k8svpc" {
  cidr_block = "192.168.0.0/16"
  tags = {
    Name = "k8svpc"
  }
}
